crates/eure-macros/tests/compile_fail/opaque_missing_from_impl_into.rs
use eure::IntoEure;

mod external {
    pub struct Target;
}

#[derive(IntoEure)]
#[eure(opaque = "external::Target")]
struct Proxy {
    a: u32,
}

fn main() {}
